refactor: secure contact section and update metadata

--- a/01-Web-Foundations/Week1-HTML-CSS-Git/Day02-HTML-Structure-and-Semantics/index.html
+++ b/01-Web-Foundations/Week1-HTML-CSS-Git/Day02-HTML-Structure-and-Semantics/index.html
@@ -155,10 +155,15 @@
             <h2>Connect & Follow</h2>
             <ul>
                 <li>
-                    <a href="https://github.com/royweb3dev" target="_blank">GitHub</a></li>
+                    <a href="https://github.com/royweb3dev" target="_blank" rel="noopener">GitHub</a>
+                </li>
                 <li>
-                    <a href="https://twitter.com/Roy_Natsir" target="_blank">X</a></li>
+                    <a href="https://x.com/Roy_Natsir" target="_blank" rel="noopener">X Profile - DMs Open</a>
+                </li>
             </ul>
+            <p class="disclaimer">
+                ⚠️ This is a public build log. Contact links are visible for collaboration purposes only.</p>
+
             <p>© 2025 Roy Natsir — Building in Public. All code is open and tracked.</p>
         </footer>
     </body>
