refactor: apply final validated skill roadmap structure

--- a/01-Web-Foundations/Week1-HTML-CSS-Git/Day02-HTML-Structure-and-Semantics/index.html
+++ b/01-Web-Foundations/Week1-HTML-CSS-Git/Day02-HTML-Structure-and-Semantics/index.html
@@ -97,168 +97,53 @@
         </article>
       </section>
 
-      <!-- Skill Roadmap Section-->
-      <section id="roadmap">
-        <h2>Skill Roadmap</h2>
-        <p>
-          <em
-            >Status: <strong>Completed</strong> / <strong>In Progress</strong> /
-            <strong>Planned</strong></em
-          >
-        </p>
+      <!-- Skill Roadmap Section - FINAL VERSION -->
+<section id="roadmap">
+    <h2>Skill Roadmap</h2>
+    <p><em>Status: <strong>(Completed)</strong> / <strong>(In Progress)</strong> / <strong>(Planned)</strong></em></p>
 
-        <!-- Month 1–2 -->
-        <article>
-          <h3>Web Foundations (Month 1-2)</h3>
-          <ul>
-            <li>
-              Semantic HTML5 & Accessibility <strong>(In Progress)</strong>
-            </li>
-            <li>
-              CSS: Flexbox, Grid, Responsive Design
-              <strong>(In Progress)</strong>
-            </li>
-            <li>Git & GitHub Workflow <strong>(Completed)</strong></li>
-            <li>
-              JavaScript Fundamentals: ES6+, DOM, Async
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              Code Quality: ESLint, Prettier, EditorConfig
-              <strong>(Planned)</strong>
-            </li>
-          </ul>
-        </article>
+    <article>
+        <h3>Foundations (Month 1-2)</h3>
+        <ul>
+            <li>Semantic HTML5 & Accessibility <strong>(In Progress)</strong></li>
+            <li>CSS (Flexbox, Grid, Responsive) & SASS <strong>(Planned)</strong></li>
+            <li>Git & Professional GitHub Workflow <strong>(Planned)</strong></li>
+            <li>JavaScript Fundamentals (ES6+, DOM, Async) <strong>(Planned)</strong></li>
+        </ul>
+    </article>
 
-        <!-- Month 3 -->
-        <article>
-          <h3>Frontend & UI State (Month 3)</h3>
-          <ul>
-            <li>
-              Modern Frontend: React, Next.js (App Router)
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              State Management: Zustand, Custom Hooks <strong>(Planned)</strong>
-            </li>
-            <li>
-              Form Handling: React Hook Form, Zod/Yup <strong>(Planned)</strong>
-            </li>
-          </ul>
-        </article>
+    <article>
+        <h3>Frontend & dApp UX (Month 3, 11-12)</h3>
+        <ul>
+            <li>Modern Frontend Stack: React, Next.js (App Router) <strong>(Planned)</strong></li>
+            <li>State Management & Form Handling: Zustand, React Hook Form <strong>(Planned)</strong></li>
+            <li>Frontend Testing: Vitest (Unit) & Playwright (E2E) <strong>(Planned)</strong></li>
+            <li>Wallet Integration & Auth: Wagmi, CosmJS, SIWE <strong>(Planned)</strong></li>
+        </ul>
+    </article>
+    
+    <article>
+        <h3>Smart Contracts & Blockchain (Month 4-8, 13)</h3>
+        <ul>
+            <li>Solidity & EVM Architecture: ERC Standards, UUPS Proxy <strong>(Planned)</strong></li>
+            <li>Professional Contract Testing: Foundry (Unit, Fuzz, Invariant) <strong>(Planned)</strong></li>
+            <li>Smart Contract Security: Slither, Manual Audits <strong>(Planned)</strong></li>
+            <li>Cosmos Ecosystem: Cosmos SDK (Go) & CosmWasm (Rust) <strong>(Planned)</strong></li>
+            <li>Cross-Chain Communication: LayerZero & IBC Patterns <strong>(Planned)</strong></li>
+            <li>Zero-Knowledge Circuits: Noir Language <strong>(Planned)</strong></li>
+        </ul>
+    </article>
 
-        <!-- Month 4–8 -->
-        <article>
-          <h3>Smart Contracts & Multichain (Month 4-8)</h3>
-          <ul>
-            <li>
-              Solidity: ERC20/721, UUPS Proxy Pattern <strong>(Planned)</strong>
-            </li>
-            <li>
-              Foundry Testing: Unit, Fuzz, Invariant <strong>(Planned)</strong>
-            </li>
-            <li>
-              Security: Slither, MythX, Echidna <strong>(Planned)</strong>
-            </li>
-            <li>
-              Gas Profiling: Foundry Gas Snapshots <strong>(Planned)</strong>
-            </li>
-            <li>
-              Cross-Chain: LayerZero Messaging, IBC (Cosmos)
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              Cosmos SDK + CosmWasm (Go & Rust) <strong>(Planned)</strong>
-            </li>
-            <li>Chainlink Oracle Integration <strong>(Planned)</strong></li>
-          </ul>
-        </article>
-
-        <!-- Month 5–7 -->
-        <article>
-          <h3>Testing & Validation (Month 5-7)</h3>
-          <ul>
-            <li>
-              Smart Contract Testing: Foundry, Hardhat (Mocha/Chai)
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              Frontend Testing: Vitest, Playwright, React Testing Library
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              Security Testing: Fuzzing, Static Analysis, Manual Audits
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              Cross-Chain Verification: LayerZero/IBC Msg Testing
-              <strong>(Planned)</strong>
-            </li>
-          </ul>
-        </article>
-
-        <!-- Month 8–10 -->
-        <article>
-          <h3>Backend & DevOps (Month 8-10)</h3>
-          <ul>
-            <li>
-              Node.js API: Express + GraphQL Yoga <strong>(Planned)</strong>
-            </li>
-            <li>
-              Database & Indexing: PostgreSQL, The Graph, SubQuery
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              Deployment: Docker, Vercel, Smart Contract Pipelines
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              CI/CD: GitHub Actions for Contract & Frontend Tests
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              Monitoring: Sentry, Grafana Dashboards <strong>(Planned)</strong>
-            </li>
-          </ul>
-        </article>
-
-        <!-- Month 11–12 -->
-        <article>
-          <h3>Advanced UX & dApp Integration (Month 11-12)</h3>
-          <ul>
-            <li>
-              Wallet Connection: Wagmi, RainbowKit, CosmJS
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              Session Auth: SIWE (Sign-In With Ethereum)
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              Persistent State: LocalStorage, Zustand-Middleware
-              <strong>(Planned)</strong>
-            </li>
-            <li>
-              Error Boundaries, Notifications, UX Fallbacks
-              <strong>(Planned)</strong>
-            </li>
-          </ul>
-        </article>
-
-        <!-- Month 13 -->
-        <article>
-          <h3>Zero-Knowledge Systems (Month 13)</h3>
-          <ul>
-            <li>ZK Circuits with Noir & Circom <strong>(Planned)</strong></li>
-            <li>
-              zkSNARKs & Proof Compression Techniques <strong>(Planned)</strong>
-            </li>
-            <li>
-              Private Voting Flow (capstone-ready) <strong>(Planned)</strong>
-            </li>
-          </ul>
-        </article>
-      </section>
+    <article>
+        <h3>Backend, DevOps, & Indexing (Month 8-10)</h3>
+        <ul>
+            <li>Backend API Layer: GraphQL Yoga on Node.js <strong>(Planned)</strong></li>
+            <li>Data & Indexing: PostgreSQL, The Graph (EVM), Custom Indexers (Cosmos) <strong>(Planned)</strong></li>
+            <li>CI/CD & Automation: GitHub Actions for Testing & Deployment <strong>(Planned)</strong></li>
+            <li>Infrastructure & Deployment: Docker, Vercel <strong>(Planned)</strong></li>
+        </ul>
+    </article>
+</section>
 
       <!-- Project Section - Grouped by Roadmap Quarters -->
 <section id="projects">
@@ -303,43 +188,47 @@
     </ul>
   </article>
 
-  <!-- Q3: Cross-Chain & Indexing (Month 7–10) -->
+   <!-- Q3: Cross-Chain, Testing & Backend (Month 7–10) -->
   <article>
-    <h3>Q3 - Cross-Chain Protocols & Backend Indexers (Month 7-10)</h3>
+    <h3>Q3 - Cross-Chain Protocols, Testing & Backend Indexers (Month 7-10)</h3>
     <ul>
       <li>
-        <strong>Testing Automation Pipeline:</strong> GitHub Actions CI running Foundry, Vitest, linting, and a11y checks.  
-        <p><strong><em>[Focus: CI/CD, GitHub Actions, DevOps] • Status: Planned (Month 7)</em></strong></p>
+        <strong>Testing Automation Pipeline:</strong> GitHub Actions CI running Foundry tests, Vitest unit tests, accessibility checks, and coverage reports.  
+        <p><strong><em>[Focus: CI/CD, GitHub Actions, Test Coverage] • Status: Planned (Month 7)</em></strong></p>
       </li>
       <li>
-        <strong>Cross-Chain Bridge Prototype:</strong> EVM ↔ Cosmos message bridge using LayerZero & IBC patterns.  
+        <strong>Security Audit Lab:</strong> Static + dynamic analysis on Solidity contracts using Slither, Echidna, gas profiler, and Playwright for dApp frontend.  
+        <p><strong><em>[Focus: Slither, Echidna, Playwright, Audit Flow] • Status: Planned (Month 7)</em></strong></p>
+      </li>
+      <li>
+        <strong>Cross-Chain Bridge Prototype:</strong> EVM ↔ Cosmos message bridge using LayerZero & IBC relayer design.  
         <p><strong><em>[Focus: LayerZero, IBC, CosmWasm] • Status: Planned (Month 8)</em></strong></p>
       </li>
       <li>
-        <strong>CLI Voter (Cosmos SDK):</strong> A terminal app for on-chain voting using Go and Stargate RPC.  
-        <p><strong><em>[Focus: Cosmos SDK, Go, CLI UX] • Status: Planned (Month 9)</em></strong></p>
+        <strong>CLI Voter (Cosmos SDK):</strong> Terminal-based app for on-chain proposal voting using Stargate RPC + Go.  
+        <p><strong><em>[Focus: Cosmos SDK, CLI UX, Stargate] • Status: Planned (Month 9)</em></strong></p>
       </li>
       <li>
-        <strong>Unified GraphQL Indexer:</strong> Combines subgraphs (The Graph) with SubQuery to serve a unified GraphQL API.  
-        <p><strong><em>[Focus: GraphQL Yoga, PostgreSQL, The Graph/SubQuery] • Status: Planned (Month 10)</em></strong></p>
+        <strong>Unified Backend API Layer:</strong> GraphQL API built on top of The Graph (EVM) and SubQuery (Cosmos), exposed via GraphQL Yoga + PostgreSQL.  
+        <p><strong><em>[Focus: GraphQL Yoga, Indexing, Data Gateway] • Status: Planned (Month 10)</em></strong></p>
       </li>
     </ul>
   </article>
 
   <!-- Q4: ZK & Capstone (Month 11–14) -->
   <article>
-    <h3>Q4 - ZK Privacy & Capstone DAO (Month 11-14)</h3>
+    <h3>Q4 -ZK Privacy & Capstone DAO (Month 11-14)</h3>
     <ul>
       <li>
-        <strong>Private Voting Circuit (Noir):</strong> ZK circuit using Noir to enable anonymous ballot validation.  
-        <p><strong><em>[Focus: ZK-SNARKs, Noir DSL, Circuit Design] • Status: Planned (Month 11)</em></strong></p>
+        <strong>Private Voting Circuit (Noir):</strong> ZK circuit using Noir DSL to prove ballot validity without leaking voter identity.  
+        <p><strong><em>[Focus: ZK-SNARKs, Noir, Circuit Design] • Status: Planned (Month 11)</em></strong></p>
       </li>
       <li>
-        <strong>Capstone - Multichain Voting DAO:</strong> End-to-end governance dApp built with Solidity + CosmWasm, LayerZero cross-chain sync, and ZK privacy.  
-        <p><strong><em>[Focus: Full Stack, ZK Privacy, Cross-Chain Infra] • Status: Planned (Month 11-14)</em></strong></p>
+        <strong>Capstone - Multichain Voting DAO:</strong> Full-stack DAO dApp with cross-chain governance, ZK privacy, professional UI/UX, and CI/CD.  
+        <p><strong><em>[Focus: Full Stack, ZK, Cosmos+EVM Integration] • Status: Planned (Month 11-14)</em></strong></p>
         <ul>
-          <li>Smart Contracts: Solidity (EVM) + CosmWasm (Cosmos)</li>
-          <li>Messaging: LayerZero, IBC</li>
+          <li>Smart Contracts: Solidity + CosmWasm</li>
+          <li>Messaging: LayerZero + IBC</li>
           <li>Frontend: Next.js, Zustand, SIWE</li>
           <li>Indexing: The Graph, SubQuery</li>
           <li>Privacy: Noir ZK Circuits</li>
@@ -348,12 +237,11 @@
     </ul>
   </article>
 
-  <!-- Project Summary -->
-
+ <!-- Project Summary -->
   <div class="progress-summary">
     <h4>Portfolio Summary</h4>
     <p>
-      <strong>Planned:</strong> 12 Projects &nbsp;|&nbsp;
+      <strong>Planned:</strong> 14 Projects &nbsp;|&nbsp;
       <strong>Completed:</strong> 1 &nbsp;|&nbsp;
       <strong>In Progress:</strong> 1 &nbsp;|&nbsp;
       <strong>Capstone ETA:</strong> Month 14
