docs(Full Stack Web3 Developer): update progress and notes

--- a/Full Stack Web3 Training/01-Web-Foundations/Week1-HTML-CSS-Git/Day06-Component-Practice/index.html
+++ b/Full Stack Web3 Training/01-Web-Foundations/Week1-HTML-CSS-Git/Day06-Component-Practice/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Roy Natsir's technical portfolio - a 14-month documented journey into full-stack Web3 development."
+      content="Roy Natsir's technical portfolio - a 14-month documented journey into Full-Stack Web3 Development."
     />
     <title>Roy Natsir - Full Stack Web3 Developer in Training</title>
 
@@ -27,11 +27,12 @@
       <h1>Roy Natsir</h1>
       <div class="header-sub-row">
         <p class="subtitle">
-          Web3 Developer in Training | Building a Multichain Voting DAO
+          Full Stack Web3 Developer in Training | Building a Multichain Voting
+          DAO
         </p>
         <nav class="main-nav">
           <ul>
-            <li><a href="#journey">Journey</a></li>
+            <li><a href="#about-me">About Me</a></li>
             <li><a href="#proof-of-work">Proof of Work</a></li>
             <li><a href="#roadmap">Skill Roadmap</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -42,13 +43,16 @@
     </header>
 
     <main class="main-container">
-      <section id="journey">
-        <h2>The Learning Journey</h2>
+      <section id="about-me" class="card-section">
+        <h2>About Me</h2>
         <p>
-          I'm on a structured 14-month development track to become a
-          production-ready Web3 engineer. This portfolio documents my
-          progress—not just what I've learned, but what I've actually built.
-          Everything here is tracked, commit by commit.
+          I'm currently undergoing a 14-month intensive training program to
+          become a production-grade Full Stack Web3 Engineer. My focus spans
+          smart contract development, multichain architecture, and decentralized
+          application design. This portfolio reflects my actual progress—what
+          I've built, how I built it, and the technical decisions behind each
+          step. Every section is versioned, documented, and backed by real code
+          contributions.
         </p>
       </section>
 
@@ -89,15 +93,22 @@
             <h3><i class="bi bi-github"></i>Commit Evidence</h3>
             <div class="button-group">
               <a
-                href="https://validator.w3.org/nu/?doc=..." target="_blank" class="btn">
+                href="https://validator.w3.org/nu/?doc=..."
+                target="_blank"
+                class="btn"
+              >
                 <i class="bi bi-check-circle"></i>
                 <span>W3C Validated</span>
-                </a>
-                <a href=https://github.com/royweb3dev/FSWeb3/commit/..." target="_blank" class="btn">
-        <i class="bi bi-git"></i>
-        <span>View Commit</span>
-    </a>
-  </div>
+              </a>
+              <a
+                href="https://github.com/royweb3dev/FSWeb3"
+                target="_blank"
+                class="btn"
+              >
+                <i class="bi bi-git"></i>
+                <span>View Commit</span>
+              </a>
+            </div>
           </article>
         </div>
       </section>
@@ -401,6 +412,33 @@
                   <li>Privacy: Noir ZK Circuits</li>
                 </ul>
               </li>
+            </ul>
+          </article>
+        </div>
+      </section>
+
+      <section id="reusable-cards" class="card-section">
+        <h2>Project & Profile Highlights</h2>
+        <div class="grid-container grid-2-col">
+          <article class="card">
+            <h3><i class="bi bi-person-badge"></i> Developer Profile Card</h3>
+            <ul>
+              <li><strong>Name:</strong> Roy Natsir</li>
+              <li>
+                <strong>Role:</strong> Full Stack Web3 Developer (In Training)
+              </li>
+              <li><strong>Track:</strong> 14-Month Training</li>
+              <li><strong>Status:</strong> Ongoing</li>
+            </ul>
+          </article>
+
+          <article class="card">
+            <h3><i class="bi bi-rocket-takeoff-fill"></i> Project Card</h3>
+            <ul>
+              <li><strong>Title:</strong> Voting DAO</li>
+              <li><strong>Stack:</strong> Solidity, Foundry, CosmWasm</li>
+              <li><strong>Focus:</strong> Governance, Privacy, Multichain</li>
+              <li><strong>Status:</strong> Planned</li>
             </ul>
           </article>
         </div>
