--- a/01-Web-Foundations/Week1-HTML-CSS-Git/Day06-Component-Practice/index.html
+++ b/01-Web-Foundations/Week1-HTML-CSS-Git/Day06-Component-Practice/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../../../assets/css/styles.css" />
   </head>
 
   <body>
