docs(Full-Stack-Web3-Developer): update progress and notes

--- a/01-Web-Foundations/Week2-CSS-Layout-Responsiveness/Day09-CSS-Grid-Basics/index.html
+++ b/01-Web-Foundations/Week2-CSS-Layout-Responsiveness/Day09-CSS-Grid-Basics/index.html
@@ -33,6 +33,7 @@
         <nav class="main-nav">
           <ul>
             <li><a href="#about-me">About Me</a></li>
+            <li><a href="#features">Core Competencies</a></li>
             <li><a href="#proof-of-work">Proof of Work</a></li>
             <li><a href="#roadmap">Skill Roadmap</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -54,6 +55,46 @@
           step. Every section is versioned, documented, and backed by real code
           contributions.
         </p>
+      </section>
+
+      <section id="features" class="card-section">
+        <h2>Core Competencies</h2>
+        <div class="grid-container grid-4-col">
+          <article class="card">
+            <i class="bi bi-braces"></i>
+            <h3>Frontend & UX</h3>
+            <p>
+              Building intuitive, performant, and secure user interfaces for
+              dApp interaction.
+            </p>
+          </article>
+
+          <article class="card">
+            <i class="bi bi-box-seam"></i>
+            <h3>Smart Contracts</h3>
+            <p>
+              Designing and developing robust, gas-efficient on-chain logic with
+              Solidity & CosmWasm.
+            </p>
+          </article>
+          <article class="card">
+            <i class="bi bi-shield-check"></i>
+            <h3>Security & Auditing</h3>
+            <p>
+              Protecting assets through rigorous testing, static analysis, and
+              adherence to security best practices.
+            </p>
+          </article>
+
+          <article class="card">
+            <i class="bi bi-server"></i>
+            <h3>Backend & DevOps</h3>
+            <p>
+              Architecting scalable off-chain infrastructure and automated CI/CD
+              pipelines.
+            </p>
+          </article>
+        </div>
       </section>
 
       <section id="proof-of-work" class="card-section">
